# NN

./: CMakeLists.txt  run_gprof.sh
3party/google_test/lib/x86_64-linux-gnu/cmake/GTest/: GTestTargets-noconfig.cmake  GTestTargets.cmake
3party/google_test/lib/x86_64-linux-gnu/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
src/: main.cpp  mnist_format.hpp  mnist_loader.cpp  poc.cpp  tests.cpp
